@@ -9,6 +9,7 @@ SVN
 -bug#0001452: Missing "<" and ">" in "Collection Methods=>Data Input Methods=>"Input String", When Import Template 
 -bug#0001125: XML parse error on template import with degree symbol 
 -bug#0001366: Exported data templates do not import the special characters properly 
+-bug#0001528: ICMP Ping availabilty broken in UI for Windows Servers using IIS
 
 0.8.7e
 
